[package]
name = "simple-redis-wrapper"
version = "0.1.12"
edition = "2024"
authors = ["ohaddahan@gmail.com"]
license = "MIT"
description = "A simple redis client wrapper"
keywords = ["redis", "cache", "pubsub", "database"]
categories = ["caching", "database"]
repository = "https://github.com/ohaddahan/simple-redis.git"

[dependencies]
serde_json = { version = "1.0.140", features = ["raw_value"] }
serde = { version = "1.0.219", features = ["derive"] }
anyhow = { version = "1.0.98" }
tokio = { version = "1.45.1", features = ["full"] }
redis = { version = "0.32.0", features = ["uuid", "tokio-comp", "tokio-rustls-comp", "connection-manager", "tls-rustls-insecure", "safe_iterators"], optional = true }
chrono = { version = "0.4.41", features = ["clock", "serde", "wasmbind"] }
futures = { version = "0.3.31" }
fred = { version = "10.1.0", features = ["rustls", "enable-rustls", "transactions", "metrics", "serde-json", "dynamic-pool"], optional = true }

[dependencies.uuid]
version = "1.3.4"
features = [
  "v4", # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
  "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
  "serde", # Enable serialization/deserialization of UUIDs
  "js", # Enable UUID generation in WebAssembly
]

[features]
redis-rs = ["dep:redis"]
fred = ["dep:fred"]